Correction collapse

--- a/kasa/src/styles/components/_Collapse.scss
+++ b/kasa/src/styles/components/_Collapse.scss
@@ -62,6 +62,10 @@
       font-size: 18px;
       font-weight: 400;
       line-height: 143%;
+
+      @include mobile {
+        font-size: 12px;
+      }
     }
 
     ul {
@@ -74,13 +78,10 @@
         font-weight: 400;
         line-height: 143%;
         color: #000;
-      }
-    }
 
-    @include mobile {
-      p,
-      li {
-        font-size: 12px;
+        @include mobile {
+          font-size: 12px;
+        }
       }
     }
   }
