--- a/kasa/src/styles/pages/_Error404.scss
+++ b/kasa/src/styles/pages/_Error404.scss
@@ -11,20 +11,22 @@
     font-size: 288px;
     font-weight: 700;
     color: #ff6060;
+    margin-top: 50px;
   }
 
   &__message {
     font-size: 36px;
-    margin: 30px 0;
+    color: #ff6060;
   }
 
   &__link {
     color: #000;
     font-size: 18px;
     text-decoration: underline;
+    margin-top: 100px;
+    margin-bottom: 60px;
   }
 
-  // 🔽 Responsive (375px)
   @include mobile {
     &__code {
       font-size: 96px;
@@ -32,12 +34,13 @@
 
     &__message {
       font-size: 18px;
+      margin-top: 70px;
       padding: 0 20px;
     }
 
     &__link {
       font-size: 14px;
-      margin-bottom: 80px; // ✅ Espace ajouté entre le lien et le footer
+      margin-bottom: 50px;
     }
   }
 }
